--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,15 @@ uuid = "7ae5d175-93ac-4a00-8e24-e760d8160199"
 authors = ["ErlandQ"]
 version = "1.0.0-DEV"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OMEinsum = "ebe7aa44-baf0-506c-a96f-8464559b3922"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+
 [compat]
+LinearAlgebra = "1"
 julia = "1.10"
+OMEinsum = "0.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
