--- a/Project.toml
+++ b/Project.toml
@@ -4,14 +4,15 @@ authors = ["ErlandQ"]
 version = "1.0.0-DEV"
 
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OMEinsum = "ebe7aa44-baf0-506c-a96f-8464559b3922"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
 LinearAlgebra = "1"
-julia = "1.10"
 OMEinsum = "0.8"
+julia = "1.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
